--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,14 +2,26 @@
       "editor.formatOnPaste": true,
       "editor.formatOnSave": true,
 
+      "prettier.ignorePath": ".prettierignore",
       "prettier.printWidth": 1250,
       "prettier.tabWidth": 6,
       "prettier.singleQuote": true,
 
-      "editor.fontFamily": "\"Fira Code\", Consolas, 'Courier New', monospace",
+      "editor.fontFamily": "MonoLisa",
       "editor.fontLigatures": true,
-      "editor.fontSize": 12.1,
+      "editor.fontSize": 12,
+
+      "emmet.triggerExpansionOnTab": true,
+      "emmet.showSuggestionsAsSnippets": true,
+      "editor.snippetSuggestions": "top",
+      "emmet.extensionsPath": [".\\.vscode"],
 
       "editor.bracketPairColorization.enabled": true,
-      "editor.guides.bracketPairs": true
+      "editor.guides.bracketPairs": true,
+      "git.autofetch": true,
+
+      "emmet.includeLanguages": {
+            "javascript": "javascriptreact",
+            "php": "twig"
+      }
 }
